선택된 시설물 정보를 보여주는 표에 주소 항목 추가

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <th></th>
       </tr>
       <tr>
+        <th class="tableElement">주소</th>
+        <th>경기 화성시 봉담읍 와우리 00번지</th>
+      </tr>
+      <tr>
         <th class="tableElement">번호</th>
         <th>10</th>
       </tr>
