--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <li><button type="button" onclick="zoomIn()">확대</button></li>
         <li><button type="button" onclick="zoomOut()">축소</button></li>
       </ul>
-      <button type="button">시설물 추가요청</button>
+      <button type="button" onclick="location.href='./request_add.html'">시설물 추가요청</button>
     </div>
   </section>
   <br><hr><br>
   <section class="selectedFacility">
     <div class="upper">
       <h2>선택된 시설물</h2>
-      <button type="button">정보 수정요청</button>
+      <button type="button" onclick="location.href='./request_edit.html'">정보 수정요청</button>
     </div>
     <table border="1">
       <tr>
